[feat/CK-64] 로드맵 태그 생성 기능을 추가한다 (#37)